--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "material-design-icons-iconfont": "^6.7.0"
+    "material-design-icons-iconfont": "^6.7.0",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0"
   },
   "eslintConfig": {
     "root": true,
